--- a/static/debpkg.css
+++ b/static/debpkg.css
@@ -24,6 +24,7 @@
 #footer {
 	padding-right: 10px;
 	margin-left: 52px;
+	clear: both; /* added because right sidebar overlaps footer */
 }
 #pnavbar {
 	font-size: 0.75em;
